log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: logppa
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: writer-ts
          image: matibrax/writer-ts:4
          volumeMounts:
          - name: shared-logs
            mountPath: /usr/src/app/files
        - name: reader-ts
          image: matibrax/rts-front:3
          volumeMounts: 
          - name: shared-logs
            mountPath: /usr/src/app/files
          - name: cfgmap
            mountPath: /usr/src/app/files/config.txt
            #subPath: config.txt
      volumes: 
        - name: shared-logs
          persistentVolumeClaim:
            claimName: requests-claim
        - name: cfgmap
          configMap:
            name: lc-1
            #items:
            #    - key: "dotenv.txt"
            #      path: "config.txt"
